...
    let notchPercentages: [CGFloat] = [0.0, 0.93]
    let agencies = Agency.allCases.filter { $0.rawValue != "0" }

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        title = "Tickets"

        ticketCarouselView.delegate = self
        ticketCarouselView.dataSource = self
        ticketCarouselView.register(TicketCarouselViewCell.self, forCellWithReuseIdentifier: ticketCarouselViewCellID)
        setUpTicketCarouselView()

...
