...
                self.calTrainStations = stations
            }
        }
    }

    private func fetchBARTStations() {
        BART().getAllStations(completion: { stations in
            self.bartStations = stations
        })
    }

    func getDropDownOptions(for agency: Agency, onlyPasses: Bool) -> [(title: String, values: [String])] {
        var dropDownOptions = [(title: String, values: [String])]()
...
        } else {
            ticketTypes.values = tickets[agency.stringValue]?.map { $0.key }.sorted() ?? []
        }

        switch agency {
        case .BART:
            dropDownOptions.append((title: "Ticket Type", values: onlyPasses ? ["Roundtrip"] : ["Single Ride", "Roundtrip"]))
            dropDownOptions.append((title: "From", values: bartStations.map { $0.key }.sorted()))
            dropDownOptions.append((title: "To", values: bartStations.map { $0.key }.sorted()))
        case .CalTrain:
            dropDownOptions.append(ticketTypes)
            dropDownOptions.append((title: "From", values: calTrainStations.map { $0.key }.sorted()))
            dropDownOptions.append((title: "To", values: calTrainStations.map { $0.key }.sorted()))
...
