...
class TicketCheckoutViewController: UIViewController {
    var ticket = ""
    var agency = Agency.zero
    let dropDown1 = DropDownMenu(title: "ticket type", items: ["Day Pass", "3 Day Pass", "Monthly Pass"])
    let dropDown2 = DropDownMenu(title: "from", items: ["Zone 1", "Zone 2", "Zone 3", "Zone 4", "Zone 5", "Zone 6", "Zone 7"])
    let dropDown3 = DropDownMenu(title: "to", items: ["Zone 1", "Zone 2", "Zone 3", "Zone 4", "Zone 5", "Zone 6", "Zone 7"])
    let dropDown4 = DropDownMenu(title: "payment method", items: ["Apple Pay", "Credit/Debit", "Paypal", "Venmo"])

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white

        title = agency.stringValue
...
