...
//  Created by Ayesha Khan on 10/20/18.
//  Copyright © 2018 Tim Roesner. All rights reserved.
//
import UIKit

enum Agency: String, Codable, CaseIterable {
    case VTA = "SC" // VTA
    case BART = "BAR" // Bart
    case CalTrain = "CT" // Caltrain
    case Muni = "SF" // San Francisco Municipal Transportation Agency
    case UnionCity = "UC" // Union City Transit
    case SamTrans = "sam" // SamTrans
    case GoldenGateTransit = "GGT"
    case ACTransit = "AC " // AC Transit
...
