...
        view.addSubview(label)
        label.snp.makeConstraints { make in
            make.top.equalTo(signInButton.snp.bottom).offset(8)
            make.centerX.equalToSuperview()
        }

        let createVirtualButton = BayPassButton(title: "Create new Virtual Card", color: UIColor().clipperBlue)
        createVirtualButton.addTarget(self, action: #selector(createVirtualClipper), for: .touchUpInside)
        view.addSubview(createVirtualButton)
        createVirtualButton.snp.makeConstraints { make in
            make.bottom.equalTo(view.safeAreaLayoutGuide.snp.bottom).inset(20)
            make.top.equalTo(label.snp.bottom).offset(8)
            make.left.right.equalToSuperview().inset(20)
...
