...
            make.top.equalTo(toView.snp.bottom).offset(7)
            make.bottom.equalToSuperview().inset(7)
            make.left.equalToSuperview().offset(16)
            make.height.equalTo(18)
        }

        cancelButton.setTitle("Cancel", for: .normal)
        cancelButton.isUserInteractionEnabled = true
        cancelButton.setTitleColor(UIColor(red: 0, green: 122, blue: 255), for: .normal)
        cancelButton.titleLabel?.font = UIFont.systemFont(ofSize: 15)
        addSubview(cancelButton)
        cancelButton.snp.makeConstraints { make in
            make.right.equalToSuperview().inset(19)
...
